# ims-coding-agent

./: .gitignore  CLI_USAGE.md  requirements.txt  test_calculate_options.py  test_cli.py  test_config.toml  test_config.yaml  test_config_crm.yaml  test_data.csv  test_data.xlsx  test_reporting.py  test_results.json  test_results_crm.json  test_rust_integration.py
Design/: Software Requirements Specification: Proficiency Testing CLI.md  draft_01_introduction.md  draft_02_system_architecture.md  draft_03_python_module_design.md  draft_04_rust_module_design.md  draft_05_cli_design.md  draft_06_data_config_design.md  draft_07_reporting_system_design.md  draft_08_error_handling.md  draft_09_deployment_installation.md  draft_10_test_plan.md  todo.md
pt_cli_rust/: Cargo.toml  README.md  pyproject.toml
pt_cli_rust/src/: estimators.rs  lib.rs  scoring.rs  uncertainty.rs  utils.rs
src/: README.md  __init__.py  config.py  data_io.py  main.py  reporting.py
