[package]
name = "pt_cli_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "pt_cli_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
numpy = "0.20"
ndarray = { version = "0.15", features = ["std"] }
thiserror = "1.0"

[dev-dependencies]
approx = "0.5"
