[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pt-cli-rust"
description = "High-performance calculation engine for PT-CLI"
readme = "README.md"
authors = [{name = "PT-CLI Team"}]
license = {text = "MIT"}
keywords = ["statistics", "iso13528", "proficiency-testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = ["numpy>=1.16"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/vpduchuynh/ims-coding-agent"
Repository = "https://github.com/vpduchuynh/ims-coding-agent"

[tool.maturin]
features = ["pyo3/extension-module"]